--- a/index.html
+++ b/index.html
@@ -31,33 +31,185 @@
 		starTexture[0] = PIXI.Texture.fromImage("images/star0.png");
 		starTexture[1] = PIXI.Texture.fromImage("images/star1.png");
 
+		var arrowTexture = new Array(2);
+		arrowTexture[0] = PIXI.Texture.fromImage("images/arrow0.png");
+		arrowTexture[1] = PIXI.Texture.fromImage("images/arrow1.png");
+
+		var tokenTexture = new Array(6);
+		for(var i = 0; i < 6; i++){
+			tokenTexture[i] = PIXI.Texture.fromImage("images/token"+i+".png");
+		}
+
+		var ringTexture = PIXI.Texture.fromImage("images/ring.png");
+
+		var compasTexture = PIXI.Texture.fromImage("images/compas.png");
+		var compasPointTexture = PIXI.Texture.fromImage("images/compasPoint.png");
+		var compasToggleTexture = PIXI.Texture.fromImage("images/compasToggle.png");
+
 		//Mechanic variables
+		var gameWon = false;
 
 		var spaceX = 0;
 		var spaceY = 0;
 
+		var speedX = 0;
+		var speedY = 0;
+
+		var guyRotation = 0;
+		var guyAnimTimer = 0;
+		var guyFrame = 0;
+
+		var arrowAnimTimer = 0;
+		var arrowFrame = 0;
+
+		var compasOn = false;
+
+		//Stars
 		var stars = new Array(20);
 		for(var i = 0; i < stars.length; i++){
 			stars[i] = new Array(3);
 		}
-
-		var starContainer = new PIXI.DisplayObjectContainer();
-
-		//Init stars
-
 		for(var i = 0; i<stars.length; i++){
 			stars[i][0] = (Math.floor(Math.random()*1100)-50);
 			stars[i][1] = (Math.floor(Math.random()*700)-50);
 			stars[i][2] = (Math.floor(Math.random()*2));
 		}
+		var starContainer = new PIXI.DisplayObjectContainer();
+		for(var i = 0; i<stars.length; i++){
+			var nextStar = new PIXI.Sprite(starTexture[stars[i][2]]);
 
-		drawStars();
+			nextStar.position.x = stars[i][0];
+			nextStar.position.y = stars[i][1];
 
+			starContainer.addChild(nextStar);
+		}
 		stage.addChild(starContainer);
+
+		//Ring
+		var ringContainer = new PIXI.DisplayObjectContainer();
+		var ringSize = 0;
+		stage.addChild(ringContainer);
+
+		//Compas
+		var compasContainer = new PIXI.Sprite(compasTexture);
+
+		compasContainer.anchor.x = compasContainer.anchor.y = 0.5;
+		compasContainer.position.x = 1000/2;
+		compasContainer.position.y = 600/2;
+		compasContainer.alpha = 0;
+
+		stage.addChild(compasContainer);
+
+		var compasPoint = new PIXI.Sprite(compasPointTexture);
+
+		compasPoint.anchor.x = -1.5;
+		compasPoint.anchor.y = 0.5;
+		compasPoint.position.x = 1000/2;
+		compasPoint.position.y = 600/2;
+		compasPoint.alpha = 0;
+
+		stage.addChild(compasPoint);
+
+		var compasToggle = new PIXI.Sprite(compasToggleTexture);
+
+		compasToggle.interactive = true;
+		compasToggle.buttonMode = true;
+
+		compasToggle.position.x = 5;
+		compasToggle.position.y = 5;
+
+		compasToggle.mousedown = compasToggle.touchstart = function(){
+			compasOn = !compasOn;
+		}
+
+		stage.addChild(compasToggle);
+
+		//Arrows
+		var arrows = new Array(30);
+		for(var i = 0; i < arrows.length; i++){
+			arrows[i] = new Array(4);
+		}
+		arrows[0][0] = 4500; arrows[0][1] = 28500; arrows[0][2] = 5; arrows[0][3] = 0;
+		arrows[1][0] = 1500; arrows[1][1] = 25500; arrows[1][2] = 4; arrows[1][3] = 0;
+		arrows[2][0] = 28500; arrows[2][1] = 25500; arrows[2][2] = 3; arrows[2][3] = 0;
+		arrows[3][0] = 25500; arrows[3][1] = 28500; arrows[3][2] = 2; arrows[3][3] = 0;
+		arrows[4][0] = 25500; arrows[4][1] = 1500; arrows[4][2] = 1; arrows[4][3] = 0;
+		arrows[5][0] = 28500; arrows[5][1] = 4500; arrows[5][2] = 0; arrows[5][3] = 0;
+		arrows[6][0] = 1500; arrows[6][1] = 4500; arrows[6][2] = 7; arrows[6][3] = 0;
+
+		arrows[7][0] = 18000; arrows[7][1] = 4000; arrows[7][2] = 1; arrows[7][3] = 1;
+		arrows[8][0] = 25000; arrows[8][1] = 12000; arrows[8][2] = 5; arrows[8][3] = 1;
+
+		arrows[9][0] = 3000; arrows[9][1] = 26000; arrows[9][2] = 7; arrows[9][3] = 2;
+		arrows[10][0] = 8000; arrows[10][1] = 22000; arrows[10][2] = 7; arrows[10][3] = 2;
+		arrows[11][0] = 11000; arrows[11][1] = 18000; arrows[11][2] = 7; arrows[11][3] = 2;
+		arrows[12][0] = 15000; arrows[12][1] = 14000; arrows[12][2] = 7; arrows[12][3] = 2;
+
+		arrows[13][0] = 20000; arrows[13][1] = 21000; arrows[13][2] = 2; arrows[13][3] = 3;
+		arrows[14][0] = 21000; arrows[14][1] = 20000; arrows[14][2] = 0; arrows[14][3] = 3;
+		arrows[15][0] = 20000; arrows[15][1] = 19000; arrows[15][2] = 6; arrows[15][3] = 3;
+		arrows[16][0] = 19000; arrows[16][1] = 20000; arrows[16][2] = 4; arrows[16][3] = 3;
+
+		arrows[17][0] = 16000; arrows[17][1] = 26000; arrows[17][2] = 5; arrows[17][3] = 4;
+		arrows[18][0] = 13000; arrows[18][1] = 23000; arrows[18][2] = 6; arrows[18][3] = 4;
+		arrows[19][0] = 10000; arrows[19][1] = 26000; arrows[19][2] = 6; arrows[19][3] = 4;
+		arrows[20][0] = 10000; arrows[20][1] = 23000; arrows[20][2] = 0; arrows[20][3] = 4;
+		arrows[21][0] = 10000; arrows[21][1] = 20000; arrows[21][2] = 2; arrows[21][3] = 4;
+
+		arrows[22][0] = 6500; arrows[22][1] = 5000; arrows[22][2] = 2; arrows[22][3] = 5;
+		arrows[23][0] = 8000; arrows[23][1] = 6500; arrows[23][2] = 3; arrows[23][3] = 5;
+		arrows[24][0] = 9500; arrows[24][1] = 8000; arrows[24][2] = 4; arrows[24][3] = 5;
+		arrows[25][0] = 8000; arrows[25][1] = 9500; arrows[25][2] = 5; arrows[25][3] = 5;
+		arrows[26][0] = 6500; arrows[26][1] = 11000; arrows[26][2] = 6; arrows[26][3] = 5;
+		arrows[27][0] = 5000; arrows[27][1] = 9500; arrows[27][2] = 7; arrows[27][3] = 5;
+		arrows[28][0] = 3500; arrows[28][1] = 8000; arrows[28][2] = 0; arrows[28][3] = 5;
+		arrows[29][0] = 5000; arrows[29][1] = 6500; arrows[29][2] = 1; arrows[29][3] = 5;
+
+		var arrowContainer = new PIXI.DisplayObjectContainer();
+		for(var i = 0; i<arrows.length; i++){
+			var nextArrow = new PIXI.Sprite(arrowTexture[0]);
+
+			nextArrow.position.x = arrows[i][0];
+			nextArrow.position.y = arrows[i][1];
+
+			nextArrow.anchor.x = nextArrow.anchor.y = 0.5;
+
+			nextArrow.rotation = arrows[i][2]*.8;
+
+			arrowContainer.addChild(nextArrow);
+		}
+
+		stage.addChild(arrowContainer);
+
+		//Tokens
+		var tokens = new Array(6);
+		for(var i = 0; i < tokens.length; i++){
+			tokens[i] = new Array(3);
+		}
+		tokens[0][0] = 4500; tokens[0][1] = 1500; tokens[0][2] = false;
+		tokens[1][0] = 21000; tokens[1][1] = 8000; tokens[1][2] = false;
+		tokens[2][0] = 19000; tokens[2][1] = 10000; tokens[2][2] = false;
+		tokens[3][0] = 20000; tokens[3][1] = 20000; tokens[3][2] = false;
+		tokens[4][0] = 13000; tokens[4][1] = 20000; tokens[4][2] = false;
+		tokens[5][0] = 6500; tokens[5][1] = 8000; tokens[5][2] = false;
+
+		var tokenContainer = new PIXI.DisplayObjectContainer();
+		for(var i = 0; i<tokens.length; i++){
+			var nextToken = new PIXI.Sprite(tokenTexture[i]);
+
+			nextToken.position.x = tokens[i][0];
+			nextToken.position.y = tokens[i][1];
+
+			nextToken.anchor.x = nextToken.anchor.y = 0.5;
+
+			tokenContainer.addChild(nextToken);
+		}
+
+		stage.addChild(tokenContainer);
 
 		//Guy
 
-		var guy = new PIXI.Sprite(guyTexture[0]);
+		var guy = new PIXI.Sprite(guyTexture[guyFrame]);
 
 		guy.anchor.x = 0.5;
 		guy.anchor.y = 0.5;
@@ -70,23 +222,208 @@
 		//Events
 
 		document.addEventListener('mousedown', function(event) {
-			guy.position.x = event.pageX;
-			guy.position.y = event.pageY;
-        });
+			if(event.pageX < 1000 && event.pageY < 600){
+				var DX = event.pageX - (1000/2);
+				var DY = event.pageY - (600/2);
 
+				var angle = Math.atan2(DY, DX) * 180 / Math.PI;
+
+				var distance = Math.sqrt(((event.pageX-(1000/2))*(event.pageX-(1000/2)))+((event.pageY-(600/2))*(event.pageY-(600/2))));
+
+				speedX += (Math.cos((angle+180) * (Math.PI / 180)))*(Math.abs((distance-600))/100);
+				speedY += (Math.sin((angle+180) * (Math.PI / 180)))*(Math.abs((distance-600))/100);
+
+				console.log("X:"+Math.floor(spaceX)+" Y:"+Math.floor(spaceY));
+
+				if(ringSize == 0){
+					var ring = new PIXI.Sprite(ringTexture);
+					ring.anchor.x = 0.5;
+					ring.anchor.y = 0.5;
+					ring.position.x = event.pageX;
+					ring.position.y = event.pageY;
+					ringContainer.addChild(ring);
+
+					ringSize = 1;
+
+					guyRotation = (Math.random()*0.5)-0.25;
+
+					if(compasOn){
+						compasContainer.alpha=1;
+						compasPoint.alpha=1;
+					}
+
+					compasPoint.rotation = (angle + 180) * (Math.PI / 180);
+				}
+			}
+        });
+		//Animate
 		function animate() {
 		    requestAnimFrame(animate);
 
+		    ringGrow();
+		    guyAnimation();
+		    otherAinmate();
+		    movement();
+		    tokenCheck();
+
 		    renderer.render(stage);
 		}
-		function drawStars(){
-			for(var i = 0; i<stars.length; i++){
-				var nextStar = new PIXI.Sprite(starTexture[stars[i][2]]);
+		//Guy
+		function guyAnimation(){
+		    guy.rotation += guyRotation;
+		    guyRotation = guyRotation/1.01;
+		    guyAnimTimer++;
+		    if(guyAnimTimer > 50){
+		    	guyFrame++;
+		    	if(guyFrame > 1){
+		    		guyFrame = 0;
+		    	}
+		    	guy.setTexture(guyTexture[guyFrame]);
+		    	guyAnimTimer = 0;
+		    }
+		}
+		//Other Animation
+		function otherAinmate(){
+			//Arrows
+			for(var i = 0; i < arrows.length; i++){
+				arrowContainer.getChildAt(i).position.x = arrows[i][0] - spaceX;
+				arrowContainer.getChildAt(i).position.y = arrows[i][1] - spaceY;
+		    	arrowContainer.getChildAt(i).setTexture(arrowTexture[arrowFrame]);
+			}
+		    arrowAnimTimer++;
+		    if(arrowAnimTimer > 42){
+		    	arrowFrame++;
+		    	if(arrowFrame > 1){
+		    		arrowFrame = 0;
+		    	}
+		    	arrowAnimTimer = 0;
+		    }
+		    //Tokens
+			for(var i = 0; i < tokens.length; i++){
+				if(tokens[i][2] == false){
+					tokenContainer.getChildAt(i).position.x = tokens[i][0] - spaceX;
+					tokenContainer.getChildAt(i).position.y = tokens[i][1] - spaceY;
+				}
+			}
+			//Compas
+			compasContainer.alpha-=0.02;
+			compasPoint.alpha-=0.02;
+		}
+		//Movement
+		function movement(){
+			spaceX += speedX;
+			spaceY += speedY;
 
-				nextStar.position.x = stars[i][0];
-				nextStar.position.y = stars[i][1];
+			if(spaceX < 0){
+				spaceX = 30000;
+				for(var i = 0; i < stars.length; i++){
+					starContainer.getChildAt(i).position.x = stars[i][0] += 30000;
+				}
+			}
+			if(spaceX > 30000){
+				spaceX = 0;
+				for(var i = 0; i < stars.length; i++){
+					starContainer.getChildAt(i).position.x = stars[i][0] -= 30000;
+				}
+			}
+			if(spaceY < 0){
+				spaceY = 30000;
+				for(var i = 0; i < stars.length; i++){
+					starContainer.getChildAt(i).position.y = stars[i][1] += 30000;
+				}
+			}
+			if(spaceY > 30000){
+				spaceY = 0;
+				for(var i = 0; i < stars.length; i++){
+					starContainer.getChildAt(i).position.y = stars[i][1] -= 30000;
+				}
+			}
 
-				starContainer.addChild(nextStar);
+			for(var i = 0; i < stars.length; i++){
+				starContainer.getChildAt(i).position.x = stars[i][0] - spaceX;
+				starContainer.getChildAt(i).position.y = stars[i][1] - spaceY;
+			}
+
+			for(var i = 0; i < stars.length; i++){
+				if(starContainer.getChildAt(i).position.x < -100){
+					stars[i][0] = (Math.floor(Math.random()*100)+1000) + spaceX;
+					stars[i][1] = (Math.floor(Math.random()*700)-50) + spaceY;
+				}
+				if(starContainer.getChildAt(i).position.x > 1100){
+					stars[i][0] = (Math.floor(Math.random()*100)-100) + spaceX;
+					stars[i][1] = (Math.floor(Math.random()*700)-50) + spaceY;
+				}
+				if(starContainer.getChildAt(i).position.y < -100){
+					stars[i][0] = (Math.floor(Math.random()*1100)-50) + spaceX;
+					stars[i][1] = (Math.floor(Math.random()*100)+600) + spaceY;
+				}
+				if(starContainer.getChildAt(i).position.y > 1100){
+					stars[i][0] = (Math.floor(Math.random()*1100)-50) + spaceX;
+					stars[i][1] = (Math.floor(Math.random()*100)-100) + spaceY;
+				}
+			}
+
+			var top_speed = 20;
+			if(speedX > top_speed){
+				speedX = top_speed;
+			}
+			if(speedX < -top_speed){
+				speedX = -top_speed;
+			}
+			if(speedY > top_speed){
+				speedY = top_speed;
+			}
+			if(speedY < -top_speed){
+				speedY = -top_speed;
+			}
+
+			speedX = speedX/1.01;
+			speedY = speedY/1.01;
+		}
+		//Token Functions
+		function tokenCheck(){
+			var win = true;
+			for(var i = 0; i<tokens.length; i++){
+				if(spaceX+1000/2 > tokens[i][0]-50 && spaceX+1000/2 < tokens[i][0]+50 && spaceY+600/2 > tokens[i][1]-50 && spaceY+600/2 < tokens[i][1]+50 && tokens[i][2] == false){
+					gotToken(i);
+				}
+				if(tokens[i][2] == false){
+					win = false;
+				}
+			}
+			if(win && gameWon == false){
+				alert("YOU WIN!");
+				gameWon = true;
+			}
+		}
+		function gotToken(id){
+			tokens[id][2] = true;
+			tokenContainer.getChildAt(id).position.x = (60*id) + 30;
+			tokenContainer.getChildAt(id).position.y = 560;
+			tokenContainer.getChildAt(id).scale.x = tokenContainer.getChildAt(id).scale.y = .4;
+			for(var i = 0; i<arrows.length; i++){
+				if(arrows[i][3] == id){
+					arrowContainer.getChildAt(i).visible = false;
+				}
+			}
+		}
+		//Ring
+		function ringGrow(){
+			if(ringSize > 0){
+				if(ringSize < 20){
+					ringSize++;
+					ringContainer.getChildAt(0).scale.x=ringSize/12;
+					ringContainer.getChildAt(0).scale.y=ringSize/12;
+					ringContainer.getChildAt(0).alpha-=.04;
+				}else{
+					removeRing();
+					ringSize = 0;
+				}
+			}
+		}
+		function removeRing(){
+			while(ringContainer.children.length > 0){
+				ringContainer.removeChild(ringContainer.getChildAt(0));
 			}
 		}
 		</script>
